ДЗ по 10-му уроку

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,7 +41,7 @@
     <script src="store/store.js"></script>
     <script src="welcome/welcome.js"></script>
     <script src="edit_product/edit_product.js"></script>
-<!--    <script src="order/order.js"></script>-->
+    <script src="order/order.js"></script>
 
 </div>
 </body>
