--- a/src/main/resources/static/order/order.html
+++ b/src/main/resources/static/order/order.html
@@ -1,24 +1,24 @@
-<!--<div>-->
-<!--    <h3>Список продуктов в корзине</h3>-->
-<!--<table class="table">-->
-<!--    <thead>-->
-<!--    <tr>-->
-<!--        <td>ID</td>-->
-<!--        <td>Название</td>-->
-<!--        <td>Цена</td>-->
+<div>
+    <h3>Список продуктов в корзине</h3>
+<table class="table">
+    <thead>
+    <tr>
+        <td>ID</td>
+        <td>Название</td>
+        <td>Цена</td>
 <!--        <td>Удалить из корзины</td>-->
 
-<!--    </tr>-->
-<!--    </thead>-->
-<!--    <tbody>-->
-<!--    <tr ng-repeat='p in orderPage.content'>-->
-<!--        <td>{{p.id}}</td>-->
-<!--        <td>{{p.title}}</td>-->
-<!--        <td>{{p.price}}</td>-->
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat='p in orderPage'>
+        <td>{{p.id}}</td>
+        <td>{{p.title}}</td>
+        <td>{{p.price}}</td>
 <!--        <td>-->
 <!--            <button class="btn btn-primary" ng-click="deleteProductFromOrder(p.id)">Удалить</button>-->
 <!--        </td>-->
-<!--    </tr>-->
-<!--    </tbody>-->
-<!--</table>-->
-<!--</div>-->
+    </tr>
+    </tbody>
+</table>
+</div>
