--- a/src/main/resources/static/store/store.html
+++ b/src/main/resources/static/store/store.html
@@ -24,9 +24,8 @@
                 <button class="btn btn-primary" ng-click="goToEditProductPage(p.id)">Изменить</button>
             </td>
             <td>
-                <button class="btn btn-primary" ng-click="fillOrder(p.id)">Добавить в корзину</button>
+                <button class="btn btn-primary" ng-click="goToOrderPage(p.id)">Добавить в корзину</button>
             </td>
-
         </tr>
         </tbody>
     </table>
