--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,9 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#!/store" style="...">Каталог товаров</a>
                     </li>
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#!/order" style="...">Корзина</a>-->
-<!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#!/order" style="...">Корзина</a>
+                    </li>
                 </ul>
             </div>
         </nav>
