--- a/src/main/resources/static/welcome/welcome.html
+++ b/src/main/resources/static/welcome/welcome.html
@@ -1,5 +1,5 @@
 <div>
     <p></p>
     <h3>Marketplace</h3>
-    <h5>Лучший магазин в интернете</h5>
+    <h5>Мой магазин (учебный проект для ДЗ)</h5>
 </div>
