ДЗ по 12-му уроку.

--- a/src/main/resources/static/welcome/welcome.html
+++ b/src/main/resources/static/welcome/welcome.html
@@ -2,4 +2,6 @@
     <p></p>
     <h3>Marketplace</h3>
     <h5>Мой магазин (учебный проект для ДЗ)</h5>
+    <h4 ng-show="!isUserLoggedIn()">Вы еще не авторизовались. Вам не доступен функционал для зарегистрированных пользователей</h4>
+    <h4 ng-show="isUserLoggedIn()">Вы авторизовались. Вам доступен функционал в соответствии с вашими правами доступа</h4>
 </div>
